force-app/main/default/objects/PSButtonLauncherItem__c/PSButtonLauncherItem__c.object-meta.xml
<CustomObject>
    <label>PSButtonLauncherItem</label>
    <nameField>
        <displayFormat>BLI-{00000}</displayFormat>
        <label>PSButtonLauncherItem ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSButtonLauncherItem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>