force-app/main/default/objects/PSButtonLauncherItem__c/fields/City_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>City_Field_API_Name__c</fullName>
    <label>City Field API Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>