force-app/main/default/objects/PSButtonLauncherItem__c/fields/Confirmation_Msg__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Msg__c</fullName>
    <label>Confirmation Msg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>