force-app/main/default/objects/PSButtonLauncherItem__c/fields/Contact_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Field_API_Name__c</fullName>
    <label>Contact Field API Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>