force-app/main/default/objects/PSButtonLauncherItem__c/fields/Full_Address_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Address_Field_API_Name__c</fullName>
    <label>Full Address Field API Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>