force-app/main/default/objects/PSButtonLauncherItem__c/fields/Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Icon_URL__c</fullName>
    <label>Icon URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>