force-app/main/default/objects/PSButtonLauncherItem__c/fields/Latitude_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Latitude_Field_API_Name__c</fullName>
    <label>Latitude Field API Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>