force-app/main/default/objects/PSButtonLauncherItem__c/fields/Longitude_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Longitude_Field_API_Name__c</fullName>
    <label>Longitude Field API Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>