force-app/main/default/objects/PSButtonLauncherItem__c/fields/PSButtonLauncherCategory__c.field-meta.xml
<CustomField>
    <fullName>PSButtonLauncherCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSButtonLauncherCategory</label>
    <referenceTo>PSButtonLauncherCategory__c</referenceTo>
    <relationshipLabel>PSButtonLauncherItem</relationshipLabel>
    <relationshipName>PSButtonLauncherItem</relationshipName>
    <type>Lookup</type>
</CustomField>