force-app/main/default/objects/PSButtonLauncherItem__c/fields/PSButtonLauncherSetting__c.field-meta.xml
<CustomField>
    <fullName>PSButtonLauncherSetting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSButtonLauncherSetting</label>
    <referenceTo>PSButtonLauncherSetting__c</referenceTo>
    <relationshipLabel>PSButtonLauncherItem</relationshipLabel>
    <relationshipName>PSButtonLauncherItem</relationshipName>
    <type>Lookup</type>
</CustomField>