force-app/main/default/objects/PSButtonLauncherItem__c/fields/State_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Field_API_Name__c</fullName>
    <label>State Field API Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>