force-app/main/default/objects/PSButtonLauncherItem__c/fields/Street_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Street_Field_API_Name__c</fullName>
    <label>Street Field API Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>