force-app/main/default/objects/PSButtonLauncherItem__c/fields/Zipcode_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Zipcode_Field_API_Name__c</fullName>
    <label>Zipcode Field API Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>